# tiktaalik

./: .gitignore  CMakeLists.txt  LICENSE  README.md  examples.py  pyproject.toml  setup.py
f90src/: CMakeLists.txt
f90src/evolution/: CMakeLists.txt  convolution.f90  matevo.f90
f90src/helpers/: CMakeLists.txt  gridspace.f90  integration.f90  pixelation.f90  specfun.f90
f90src/kernels/: CMakeLists.txt  kernels_common.f90  kernels_lo.f90  kernels_nlo.f90
f90src/model/: CMakeLists.txt  gk.f90
f90src/qcd/: CMakeLists.txt  alpha_qcd.f90  constants.f90
python/: CMakeLists.txt  matrices.f90  qcd.f90  setup.py.in
python/tiktaalik/: evolution.py  matrices.py  model.py  qcd.py
tiktaalik/: CMakeLists.txt  __init__.py  evolution.py  matrices.py  model.py  pars.py  qcd.py
tiktaalik/f90wrap/: CMakeLists.txt  model.f90
